[tool.poetry]
name = "moehrenschleuder"
version = "0.1"
description = "a tool for CSA's to distribute and log their products"
authors = ["v <post@i3o.eu>"]

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.2.2"
sqlmodel = "^0.0.7"

[tool.poetry.dev-dependencies]
python-testmark = "^1.0"
bandit = "^1.7.4"
pre-commit = "^2.17.0"
ipython = "^8.1.1"
pytest = "^7.1.0"
coverage = "^6.3.2"
pytest-cov = "^3.0.0"
invoke = "^1.6.0"
pytest-watch = "^4.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

