[tool.poetry]
name = "moehrenschleuder"
version = "0.1"
description = "a tool for CSA's to distribute and log their products"
authors = ["v <post@i3o.eu>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.2.2"
gunicorn = "^20.1.0"
python-testmark = "^1.0"
Flask-SQLAlchemy = "^2.5.1"
WTForms-Alchemy = "^0.18.0"
python-dotenv = "^0.21.0"
pydantic = "^1.10.2"
Flask-Migrate = "^3.1.0"
flask_weasyprint = "^1.0.0"

[tool.poetry.group.dev.dependencies]
python-testmark = "^1.0"
bandit = "^1.7.4"
pre-commit = "^2.17.0"
ipython = "^8.1.1"
pytest = "^7.1.0"
coverage = "^6.3.2"
pytest-cov = "^3.0.0"
invoke = "^1.6.0"
pytest-watch = "^4.2.0"
bs4 = "^0.0.1"
flake8 = "^5.0.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
